src/oui.h


enum {
    UI_MAX_DATASIZE = 4096,
    UI_MAX_DEPTH = 64,
    UI_MAX_INPUT_EVENTS = 64,
    UI_CLICK_THRESHOLD = 250,
};
typedef unsigned int UIuint;
typedef struct UIcontext UIcontext;
typedef enum UIitemState {
    UI_COLD = 0,
    UI_HOT = 1,
    UI_ACTIVE = 2,
    UI_FROZEN = 3,
} UIitemState;
typedef enum UIboxFlags {
    UI_ROW = 0x002,
    UI_COLUMN = 0x003,
    UI_LAYOUT = 0x000,
    UI_FLEX = 0x002,
    UI_NOWRAP = 0x000,
    UI_WRAP = 0x004,
    UI_START = 0x008,
    UI_MIDDLE = 0x000,
    UI_END = 0x010,
    UI_JUSTIFY = 0x018,
} UIboxFlags;
typedef enum UIlayoutFlags {
    UI_LEFT = 0x020,
    UI_TOP = 0x040,
    UI_RIGHT = 0x080,
    UI_DOWN = 0x100,
    UI_HFILL = 0x0a0,
    UI_VFILL = 0x140,
    UI_HCENTER = 0x000,
    UI_VCENTER = 0x000,
    UI_CENTER = 0x000,
    UI_FILL = 0x1e0,
    UI_BREAK = 0x200
} UIlayoutFlags;
typedef enum UIevent {
    UI_BUTTON0_DOWN = 0x0400,
    UI_BUTTON0_UP = 0x0800,
    UI_BUTTON0_HOT_UP = 0x1000,
    UI_BUTTON0_CAPTURE = 0x2000,
    UI_BUTTON2_DOWN = 0x4000,
    UI_SCROLL = 0x8000,
    UI_KEY_DOWN = 0x10000,
    UI_KEY_UP = 0x20000,
    UI_CHAR = 0x40000,
} UIevent;
enum {
    UI_USERMASK = 0xff000000,
    UI_ANY = 0xffffffff,
};
typedef void (*UIhandler)(UIcontext* ui_context, int item, UIevent event);
typedef struct UIvec2 {
#if OUI_USE_UNION_VECTORS
    union {
        int v[2];
        struct { int x, y; };
    };
#else
    int x, y;
#endif
} UIvec2;
typedef struct UIrect {
#if OUI_USE_UNION_VECTORS
    union {
        int v[4];
        struct { int x, y, w, h; };
    };
#else
    int x, y, w, h;
#endif
} UIrect;
OUI_EXPORT UIcontext *uiCreateContext(
        unsigned int item_capacity,
        unsigned int buffer_capacity);
OUI_EXPORT void uiDestroyContext(UIcontext *ctx);
OUI_EXPORT void uiSetContextHandle(UIcontext *ui_context, void *handle);
OUI_EXPORT void *uiGetContextHandle(UIcontext *ui_context);
OUI_EXPORT void uiSetCursor(UIcontext *ui_context, int x, int y);
OUI_EXPORT UIvec2 uiGetCursor(UIcontext *ui_context);
OUI_EXPORT UIvec2 uiGetCursorDelta(UIcontext *ui_context);
OUI_EXPORT UIvec2 uiGetCursorStart(UIcontext *ui_context);
OUI_EXPORT UIvec2 uiGetCursorStartDelta(UIcontext *ui_context);
OUI_EXPORT void uiSetButton(UIcontext *ui_context, unsigned int button, unsigned int mod, bool enabled);
OUI_EXPORT int uiGetButton(UIcontext *ui_context, unsigned int button);
OUI_EXPORT int uiGetClicks(UIcontext *ui_context);
OUI_EXPORT void uiSetKey(UIcontext *ui_context, unsigned int key, unsigned int mod, bool enabled);
OUI_EXPORT void uiSetChar(UIcontext *ui_context, unsigned int value);
OUI_EXPORT void uiSetScroll(UIcontext *ui_context, int x, int y);
OUI_EXPORT UIvec2 uiGetScroll(UIcontext *ui_context);
OUI_EXPORT void uiBeginLayout(UIcontext *ui_context);
OUI_EXPORT void uiEndLayout(UIcontext *ui_context);
OUI_EXPORT void uiUpdateHotItem(UIcontext *ui_context);
OUI_EXPORT void uiProcess(UIcontext *ui_context, int timestamp);
OUI_EXPORT void uiClearState(UIcontext *ui_context);
OUI_EXPORT int uiItem(UIcontext *ui_context);
OUI_EXPORT void uiSetFrozen(UIcontext *ui_context, int item, bool enable);
OUI_EXPORT void uiSetHandle(UIcontext *ui_context, int item, void *handle);
OUI_EXPORT void *uiAllocHandle(UIcontext *ui_context, int item, unsigned int size);
OUI_EXPORT void uiSetHandler(UIcontext *ui_context, UIhandler handler);
OUI_EXPORT void uiSetEvents(UIcontext *ui_context, int item, unsigned int flags);
OUI_EXPORT void uiSetFlags(UIcontext *ui_context, int item, unsigned int flags);
OUI_EXPORT int uiInsert(UIcontext *ui_context, int item, int child);
OUI_EXPORT int uiAppend(UIcontext *ui_context, int item, int sibling);
OUI_EXPORT int uiInsertBack(UIcontext *ui_context, int item, int child);
OUI_EXPORT int uiInsertFront(UIcontext *ui_context, int item, int child);
OUI_EXPORT void uiSetSize(UIcontext *ui_context, int item, int w, int h);
OUI_EXPORT void uiSetLayout(UIcontext *ui_context, int item, unsigned int flags);
OUI_EXPORT void uiSetBox(UIcontext *ui_context, int item, unsigned int flags);
OUI_EXPORT void uiSetMargins(UIcontext *ui_context, int item, short l, short t, short r, short b);
OUI_EXPORT void uiFocus(UIcontext *ui_context, int item);
OUI_EXPORT int uiFirstChild(UIcontext *ui_context, int item);
OUI_EXPORT int uiNextSibling(UIcontext *ui_context, int item);
OUI_EXPORT int uiGetItemCount(UIcontext *ui_context);
OUI_EXPORT unsigned int uiGetAllocSize(UIcontext *ui_context);
OUI_EXPORT UIitemState uiGetState(UIcontext *ui_context, int item);
OUI_EXPORT void *uiGetHandle(UIcontext *ui_context, int item);
OUI_EXPORT int uiGetHotItem(UIcontext *ui_context);
OUI_EXPORT int uiGetFocusedItem(UIcontext *ui_context);
OUI_EXPORT int uiFindItem(UIcontext *ui_context, int item, int x, int y,
        unsigned int flags, unsigned int mask);
OUI_EXPORT UIhandler uiGetHandler(UIcontext *ui_context);
OUI_EXPORT unsigned int uiGetEvents(UIcontext *ui_context, int item);
OUI_EXPORT unsigned int uiGetFlags(UIcontext *ui_context, int item);
OUI_EXPORT unsigned int uiGetKey(UIcontext *ui_context);
OUI_EXPORT unsigned int uiGetModifier(UIcontext *ui_context);
OUI_EXPORT UIrect uiGetRect(UIcontext *ui_context, int item);
OUI_EXPORT int uiContains(UIcontext *ui_context, int item, int x, int y);
OUI_EXPORT int uiGetWidth(UIcontext *ui_context, int item);
OUI_EXPORT int uiGetHeight(UIcontext *ui_context, int item);
OUI_EXPORT unsigned int uiGetLayout(UIcontext *ui_context, int item);
OUI_EXPORT unsigned int uiGetBox(UIcontext *ui_context, int item);
OUI_EXPORT short uiGetMarginLeft(UIcontext *ui_context, int item);
OUI_EXPORT short uiGetMarginTop(UIcontext *ui_context, int item);
OUI_EXPORT short uiGetMarginRight(UIcontext *ui_context, int item);
OUI_EXPORT short uiGetMarginDown(UIcontext *ui_context, int item);
OUI_EXPORT int uiRecoverItem(UIcontext *ui_context, int olditem);
OUI_EXPORT void uiRemapItem(UIcontext *ui_context, int olditem, int newitem);
OUI_EXPORT int uiGetLastItemCount(UIcontext *ui_context);
enum {
    UI_ITEM_BOX_MODEL_MASK = 0x000007,
    UI_ITEM_BOX_MASK       = 0x00001F,
    UI_ITEM_LAYOUT_MASK    = 0x0003E0,
    UI_ITEM_EVENT_MASK     = 0x07FC00,
    UI_ITEM_FROZEN         = 0x080000,
    UI_ITEM_DATA           = 0x100000,
    UI_ITEM_INSERTED       = 0x200000,
    UI_ITEM_HFIXED         = 0x400000,
    UI_ITEM_VFIXED         = 0x800000,
    UI_ITEM_FIXED_MASK     = 0xC00000,
    UI_ITEM_COMPARE_MASK = UI_ITEM_BOX_MODEL_MASK
        | (UI_ITEM_LAYOUT_MASK & ~UI_BREAK)
        | UI_ITEM_EVENT_MASK
        | UI_USERMASK,
};
typedef struct UIitem {
    void *handle;
    unsigned int flags;
    int firstkid;
    int nextitem;
    short margins[4];
    short size[2];
} UIitem;
typedef enum UIstate {
    UI_STATE_IDLE = 0,
    UI_STATE_CAPTURE,
} UIstate;
typedef enum UIstage {
    UI_STAGE_LAYOUT = 0,
    UI_STAGE_POST_LAYOUT,
    UI_STAGE_PROCESS,
} UIstage;
typedef struct UIhandleEntry {
    unsigned int key;
    int item;
} UIhandleEntry;
typedef struct UIinputEvent {
    unsigned int key;
    unsigned int mod;
    UIevent event;
} UIinputEvent;
struct UIcontext {
    unsigned int item_capacity;
    unsigned int buffer_capacity;
    UIhandler handler;
    void *handle;
    unsigned long long buttons;
    unsigned long long last_buttons;
    UIvec2 start_cursor;
    UIvec2 last_cursor;
    UIvec2 cursor;
    UIvec2 scroll;
    int active_item;
    int focus_item;
    int last_hot_item;
    int last_click_item;
    int hot_item;
    UIstate state;
    UIstage stage;
    unsigned int active_key;
    unsigned int active_modifier;
    unsigned int active_button_modifier;
    int last_timestamp;
    int last_click_timestamp;
    int clicks;
    int count;
    int last_count;
    int eventcount;
    unsigned int datasize;
    UIitem *items;
    unsigned char *data;
    UIitem *last_items;
    int *item_map;
    UIinputEvent events[UI_MAX_INPUT_EVENTS];
};